[project]
name = "comfyui-model-db"
description = "Store settings by model."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shinich39/comfyui-model-db"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-model-db"
Icon = ""
